# warcforhumans

./: .gitignore  README.md  pyproject.toml
.woodpecker/: test.yml
examples/: dumb-crawler.py  zstd-frames-info.py
tests/: conftest.py  test_basics.py  test_http_message_boundaries.py  test_revisits.py
tests/warc-tiny/: test_file_with_warc_tiny.py  warc-tiny.py
warcforhumans/: api.py  compression.py  http.py  main.py
warcforhumans/capture/: adapter.py  connection.py  h11_warc.py  http.py  httpconnection.py  pool.py  util.py
warcforhumans/warc/: api.py  compression.py
