[project]
name = "warcforhumans"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "zstandard",
    "h11 (>=0.16.0,<0.17.0)",
    "requests (>=2.32.5,<3.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest"
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests"
]

